--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
         }
     ],
     "private": false,
+    "devDependencies": {
+      "grunt": ">= 0.4.0",
+      "grunt-exec": "git://github.com/jharding/grunt-exec.git",
+      "grunt-contrib-jshint": "~0.2.0",
+      "grunt-contrib-uglify": "~0.1.2"
+    },
     "optionalDependencies": {}
 }
