--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "devDependencies": {
     "buster": "^0.7.18",
     "grunt": ">= 0.4.0",
+    "grunt-buster": "^0.3.2",
     "grunt-contrib-jshint": "~0.2.0",
     "grunt-contrib-uglify": "~0.1.2",
-    "grunt-exec": "git://github.com/jharding/grunt-exec.git"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "git://github.com/jharding/grunt-exec.git",
+    "phantomjs": "^1.9.18"
   },
   "optionalDependencies": {}
 }
